tests/ui/resolve/open-ns-7.stderr
error[E0432]: unresolved import `my_api::utils`
  --> $DIR/open-ns-7.rs:8:13
   |
LL | use my_api::utils::utils_helper;
   |             ^^^^^ could not find `utils` in `my_api`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
